# HopHopBuildServer

./: .env  .gitignore  MANIFEST.in  README.md  bootstrap.py  firststart.sh  install.sh  pyproject.toml  requirements.txt  setup.py  webserver.py
hophop/utils/: env.py
hophop/webapp/: app.py
scripts/: test_plugin.cs
server/: app.py
src/hophop/: __init__.py
src/hophop/rust_server/: __init__.py  server.py
src/hophop/rust_server/scripts/: build.cs  fill_box.cs  free-movement.cs  keybinds.cs  scripts.csproj  scripts.sln  settings.cs  test_plugin.cs
src/hophop/rust_server/systemd/: hophop-rust-server.service
src/hophop/web_server/: __init__.py  app.py  rcon_client.py  server.py
src/hophop/web_server/static/css/: main.css
src/hophop/web_server/static/js/components/: App.jsx  ConfigPage.jsx  ConnectionStatus.jsx  ConsoleOutput.jsx  ControlPage.jsx  Header.jsx  Layout.jsx  PluginsPage.jsx  ServerControl.jsx  ServerStatus.jsx  StatusItem.jsx  StatusPage.jsx  Toast.jsx
src/hophop/web_server/static/js/validation/: configValidation.js
src/hophop/web_server/systemd/: hophop-web-server.service
src/hophop/web_server/templates/: base.html  index.html
src/web/: entrypoint.sh
