[project]
name = "hophop-build-server"
version = "0.1.0"
description = "HopHop Rust Build Server"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [
    { name = "nerif-tafu" }
]
dependencies = [
    "py-steamcmd-wrapper",
    "psutil",
    "python-dotenv",
    "flask",
    "flask-socketio",
    "simple-websocket",
    "talisker",
    "gunicorn",
    "gevent"
]

[project.urls]
repository = "https://github.com/nerif-tafu/HopHopBuildServer"

[project.scripts]
hophop-rust-server = "hophop.rust_server.server:start_rust_server"
hophop-web-server = "hophop.web_server.server:run_server"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta" 